--- a/DietProject/ErrorForm.ru.resx
+++ b/DietProject/ErrorForm.ru.resx
@@ -65,7 +65,10 @@
     <value>12, 9</value>
   </data>
   <data name="ErrorLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>449, 143</value>
+    <value>449, 57</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>473, 75</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
