--- a/DietProject/ErrorForm.ru.resx
+++ b/DietProject/ErrorForm.ru.resx
@@ -65,10 +65,13 @@
     <value>12, 9</value>
   </data>
   <data name="ErrorLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>449, 57</value>
+    <value>481, 66</value>
+  </data>
+  <data name="ErrorLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>473, 75</value>
+    <value>505, 91</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
